# vivarium

./: .gitignore  Makefile  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
config/: config.toml  viv_config.h
docs/: beginner-guide.md
include/: viv_background.h  viv_bar.h  viv_cli.h  viv_config_support.h  viv_config_types.h  viv_cursor.h  viv_damage.h  viv_debug_support.h  viv_input.h  viv_ipc.h  viv_layer_view.h  viv_layout.h  viv_mappable_functions.h  viv_output.h  viv_render.h  viv_seat.h  viv_server.h  viv_toml_config.h  viv_types.h  viv_view.h  viv_wl_list_utils.h  viv_wlr_surface_tree.h  viv_workspace.h  viv_xdg_popup.h  viv_xdg_shell.h  viv_xwayland_shell.h  viv_xwayland_types.h
protocols/: meson.build
src/: meson.build  viv_background.c  viv_bar.c  viv_cli.c  viv_cursor.c  viv_damage.c  viv_input.c  viv_ipc.c  viv_layer_view.c  viv_layout.c  viv_mappable_functions.c  viv_output.c  viv_render.c  viv_seat.c  viv_server.c  viv_toml_config.c  viv_view.c  viv_wl_list_utils.c  viv_wlr_surface_tree.c  viv_workspace.c  viv_xdg_popup.c  viv_xdg_shell.c  viv_xwayland_shell.c  vivarium.c
subprojects/: drm.wrap  fff.wrap  tomlc99.wrap  unity.wrap  wayland.wrap  wlroots.wrap
subprojects/packagefiles/fff/: meson.build
subprojects/packagefiles/tomlc99/: meson.build
tests/: config_test.c  meson.build  mock_layouts.h  mock_mappable_functions.h  mock_mappables.h  test_config.c  test_layouts.c
